--- a/Workspace/.vscode/settings.json
+++ b/Workspace/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
         "botao",
+        "botaocheck",
         "caractere",
         "formulario",
+        "Fullture",
         "imputproduto",
         "Informacao",
+        "logado",
         "nomedigitado",
         "Numeros",
         "registro",
