--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "contrabarra",
         "DETRAN",
+        "Enotas",
         "LIBERAÇÃO",
-        "txtvel"
+        "txtvel",
+        "zerado"
     ]
 }
